# video-subtitle-pipeline

./: .gitignore  pyproject.toml
video_subtitle_pipeline/: __main__.py
